--- a/index.html
+++ b/index.html
@@ -46,14 +46,101 @@
     <div id="copied">Copied</div>
     <div class="spacer"></div>
     <div class="ui styled fluid accordion">
-        <div class="active title">
+      <div class="active title">
+        <i class="dropdown icon"></i>
+        <div class="series-header">
+          <div class="series-title">On the path with the Master</div>
+          <p class="series-description">Following our teacher on the difficult path</p>
+        </div>
+      </div>
+      <div class="active content">
+        <div class="series-item_wrapper">
+          <div class="series-item">
+            <div class="series-item_title">1. Endurance</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                Let us run with perseverance the race marked out for us.
+                  <div class="series-item_date">Original date: October 2, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/the_path/master1_endurance.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">2. Goals</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                We are half-hearted creatures, far too easily pleased.
+                  <div class="series-item_date">Original date: October 9, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/the_path/master2_goals.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">3. Prayer</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                Prayer connects us to God's power and plans.
+                  <div class="series-item_date">Original date: October 16, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/the_path/master3_prayer.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">4. Study</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                Be transformed by the renewing of your mind.
+                  <div class="series-item_date">Original date: October 23, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/the_path/master4_study.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">5. Service</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                Whoever wants to become great among you must be your servant.
+                  <div class="series-item_date">Original date: October 30, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/the_path/master5_service.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>        
+      <!-- <div class="title">
             <i class="dropdown icon"></i>
             <div class="series-header">
               <div class="series-title">Christmas</div>
               <p class="series-description">Some Christmas thoughts from 2016 (and one from 2015).</p>
             </div>
           </div>
-          <div class="active content">
+          <div class="content">
             <div class="series-item_wrapper">
               <div class="series-item">
                 <div class="series-item_title">1. Christmas is not...</div>
@@ -131,7 +218,8 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
+
         <div class="title">
           <i class="dropdown icon"></i>
           <div class="series-header">
@@ -150,7 +238,7 @@
                   </div>
                 <div class="series-item_spacer"></div>
                 <div class="series-item_icon">
-                    <a href="best_thoughts/1_take_responsibility.mp3">
+                    <a href="audio/best_thoughts/1_take_responsibility.mp3">
                       <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -165,7 +253,7 @@
                   </div>
                 <div class="series-item_spacer"></div>
                 <div class="series-item_icon">
-                    <a href="best_thoughts/2_forgive.mp3" >
+                    <a href="audio/best_thoughts/2_forgive.mp3" >
                       <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -180,7 +268,7 @@
                   </div>
                 <div class="series-item_spacer"></div>
                 <div class="series-item_icon">
-                    <a href="best_thoughts/3_ego_is_the_enemy.mp3" >
+                    <a href="audio/best_thoughts/3_ego_is_the_enemy.mp3" >
                       <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -195,7 +283,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="best_thoughts/4_watch_what_you_say.mp3" >
+                  <a href="audio/best_thoughts/4_watch_what_you_say.mp3" >
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -211,7 +299,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="best_thoughts/5_control.mp3" >
+                  <a href="audio/best_thoughts/5_control.mp3" >
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -226,7 +314,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="best_thoughts/6_the_end.mp3" >
+                  <a href="audio/best_thoughts/6_the_end.mp3" >
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -241,7 +329,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="best_thoughts/7-1-thank_you_message_only.mp3" >
+                  <a href="audio/best_thoughts/7-1-thank_you_message_only.mp3" >
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -267,7 +355,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/1_sin.mp3">
+                  <a href="audio/moral_excellence/1_sin.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -282,7 +370,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/2_goodness.mp3">
+                  <a href="audio/moral_excellence/2_goodness.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -297,7 +385,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/3_temperance.mp3">
+                  <a href="audio/moral_excellence/3_temperance.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -312,7 +400,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/4_humility.mp3">
+                  <a href="audio/moral_excellence/4_humility.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -327,7 +415,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/5_faithfulness.mp3">
+                  <a href="audio/moral_excellence/5_faithfulness.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -342,7 +430,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/6_repentance.mp3">
+                  <a href="audio/moral_excellence/6_repentance.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -357,7 +445,7 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/7_small-things.mp3">
+                  <a href="audio/moral_excellence/7_small-things.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
@@ -372,7 +460,93 @@
                 </div>
               <div class="series-item_spacer"></div>
               <div class="series-item_icon">
-                  <a href="moral_excellence/8_gratitude.mp3">
+                  <a href="audio/moral_excellence/8_gratitude.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="title">
+        <i class="dropdown icon"></i>
+        <div class="series-header">
+          <div class="series-title">Christmas</div>
+          <p class="series-description">Some Christmas thoughts from 2016 (and one from 2015).</p>
+        </div>
+      </div>
+      <div class="content">
+        <div class="series-item_wrapper">
+          <div class="series-item">
+            <div class="series-item_title">1. Christmas is not...</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                  Let's talk about some of the things Christmas has become.
+                  <div class="series-item_date">Original date: December 4, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/christmas-2016/cmas2016_1.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">2. A bigger giant</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                  There's the way of power and then there's the way of Christmas
+                  <div class="series-item_date">Original date: December 18, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/christmas-2016/cmas2016_3.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">3. Through ordinary means</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                  Christmas shows us that divine power can be hidden in the ordinary.
+                  <div class="series-item_date">Original date: December 24, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/christmas-2016/cmas2016_4.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">4. Light has dawned</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                  Light shining through darkness is the most powerful truth of Christmas.
+                  <div class="series-item_date">Original date: December 25, 2016</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/christmas-2016/cmas2016_5.mp3">
+                    <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <div class="series-item">
+            <div class="series-item_title">5. When the party's over</div>
+            <div class="series-item_row">
+              <div class="series-item_description">
+                  What happens to faith and faithfulness when the fun ends?
+                  <div class="series-item_date">Original date: December 27, 2015</div> 
+                </div>
+              <div class="series-item_spacer"></div>
+              <div class="series-item_icon">
+                  <a href="audio/christmas-2016/5_the_partys_over.mp3">
                     <i class="fa fa-play-circle icon-button" aria-hidden="true"></i>
                   </a>
               </div>
